--- a/src/containers/Todo/Todo.module.css
+++ b/src/containers/Todo/Todo.module.css
@@ -1,16 +1,14 @@
-.Todo
-{
+.Todo {
     text-align: center;
 }
-.Heading
-{
-    color:white;
+
+.Heading {
+    color: white;
     font-weight: bold;
     font-size: 4em;
 }
-.Icon
-{
-    margin-right: 12px;
-    color:rgb(255, 100, 0);
-}
 
+.Icon {
+    margin-right: 12px;
+    color: rgb(255, 100, 0);
+}
