--- a/src/UI/Error/Error.module.css
+++ b/src/UI/Error/Error.module.css
@@ -1,7 +1,6 @@
-.Error
-{
-    width:100%;
-    height:25px;
+.Error {
+    width: 100%;
+    height: 25px;
     color: white;
     background-color: rgb(255, 75, 75);
     margin-bottom: 15px;
@@ -9,13 +8,13 @@
     border: 1px solid orange;
     font-weight: bold;
 }
-.Span
-{
+
+.Span {
     width: 97%;
     display: inline-block;
 }
-.Cross
-{
+
+.Cross {
     transform: translateX(-10px);
     color: rgb(0, 0, 0);
     line-height: 25px;
