--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,9 +1,8 @@
-.Modal
-{
+.Modal {
     position: absolute;
     background-color: rgb(255, 255, 255);
-    top:54%;
-    left:50%;
+    top: 54%;
+    left: 50%;
     transform: translate(-150px);
     z-index: 10;
 
